# synapse-rust

./: .aspell.en.pws  .aspell.ignore.txt  .clippy.toml  .codecov.yml  .dockerignore  .editorconfig  .env  .env.example  .env.federation-test.example  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  .rust-analyzer.toml  .tarpaulin.toml  .tmp_probe.py  .trae_openapi_missing.txt  AGENTS.md  AUDIT_REPORT.md  CHANGELOG-SECURITY.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  CODE_QUALITY_REPORT.md  COMPILATION_FIXES_COMPLETE.md  COMPILATION_FIXES_COMPREHENSIVE.md  COMPILATION_FIXES_ROUND3.md  COMPILATION_FIXES_ROUND4.md  COMPLETE_SUMMARY.md  CONFIG_ENHANCEMENT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DB_REVIEW_REPORT.md  DEPENDENCY_UPGRADE_TRACKER.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.binary  Dockerfile.dev  (+140 more)
synapse-cache/: Cargo.toml
synapse-cache/src/: circuit_breaker.rs  invalidation.rs  lib.rs  query_cache.rs  strategy.rs
synapse-common/: Cargo.toml
synapse-common/src/: argon2_config.rs  canonical_json.rs  claims.rs  collections.rs  constants.rs  crypto.rs  error.rs  event_models.rs  event_utils.rs  feature_flags.rs  federation_test_keys.rs  health.rs  key_encryption.rs  lib.rs  logging.rs  macros.rs  media_link_signer.rs  membership_transition.rs  metrics.rs  nonce_cache.rs  password_hash_pool.rs  rate_limit.rs  rate_limit_config.rs  redaction.rs  room_versions.rs  sanitizer.rs  security.rs  server_metrics.rs  task_queue.rs  telemetry_config.rs  time.rs  tracing.rs  traits.rs  transaction.rs  types.rs  validation.rs  xml_parser.rs
synapse-common/src/config/: auth.rs  builtin_oidc.rs  database.rs  error.rs  experimental.rs  federation.rs  identity.rs  loader.rs  (+17 more)
synapse-e2ee/: Cargo.toml
synapse-e2ee/src/: lib.rs  signed_json.rs  test_mocks.rs  vodozemac_interop_tests.rs  vodozemac_megolm.rs
synapse-federation/: Cargo.toml
synapse-federation/src/: client.rs  client_api.rs  device_sync.rs  edu.rs  edu_dispatcher.rs  event_broadcaster.rs  key_rotation.rs  lib.rs  memory_tracker.rs  server_acl.rs  signing.rs  state_resolution.rs  test_mocks.rs
synapse-services/: Cargo.toml
synapse-services/src/: account_data_service.rs  account_device_list_service.rs  account_identity_service.rs  admin.rs  admin_audit_service.rs  admin_federation_service.rs  admin_media_service.rs  admin_registration_service.rs  admin_security_service.rs  admin_server_service.rs  admin_token_service.rs  admin_user_service.rs  application_service.rs  background_update_service.rs  beacon_service.rs  builtin_oidc_provider.rs  burn_after_read_service.rs  capability_governance.rs  captcha_service.rs  cas_service.rs  client_push_service.rs  container.rs  dehydrated_device_service.rs  directory_service.rs  dm_service.rs  email_verification_service.rs  event_broadcaster_trait.rs  event_notifier.rs  event_report_service.rs  event_service.rs  external_service_integration.rs  feature_flag_service.rs  federation_blacklist_service.rs  federation_key_rotation_service.rs  lib.rs  matrix_ai_connection_service.rs  mcp_proxy.rs  media_quota_service.rs  media_service.rs  mod.rs  (+32 more)
synapse-storage/: Cargo.toml
synapse-storage/.sqlx/: query-0db4990a816c11899ff6c2d9fdc912124da4918da96f89a99b8e2b2cad72bb17.json  query-2067f518e361870a199bda24ab3b057a7213b6afd263e9ef7c80bfb19d8c9150.json  query-2580007bfdae4fe4d029b41c207b1c8899af46d2bf6c6cd42c7384040bb22704.json  query-267cb58e45c6a714e1343d83b5be1cbd98d0fe444f0604ecfc1e0e1fe5622f82.json  query-2f255fae5cdd5d4467c50af48f90b01da64a724c26d811b08543aef62d666cd2.json  query-310177a21fbd32556a652da099a81ce5f5692057f8010c23b8094c1598be6958.json  query-3f1c58202118a080fe9c3e02e0b16999cb53b9ae01fad892745a1bfc7d0f1211.json  query-53cd542dc88cb8b9a8a5b2cae8016179aa90a235233ef19421089e41cbcfd7a9.json  query-792603735a342ea8133955da53398210bd5a9c96813528f8dec165cc05a37e48.json  query-8dc16992eb251337598b8fb2157b59a6dfd3174ea783de801b4dd5a8baae38bc.json  query-90e1ae804d9f8c35f35d3dbf09f035e66ec48322b55cf5dd9c97f7d028c5175e.json  query-911e693abe438ecac1cfbd57692be49efb00d259e5f2eea1802584f4521fc1d8.json  query-a22ee475237213b572aa363e68084f4b58c80bfe54037f3b2b060e844f666eb2.json  query-a30464d14e0c1f6d950126baf5b24cfed7f9e058f6e9cb9247872e07bde9cd14.json  query-a754fa5e2a0254861fdea3e8ee82679c110edd76ca09429080590848019c65ac.json  query-a9eb4755252e8be5f854a17446ac2bdf2e0ac72fe14aa0a5be11a9d5f3ee7ce5.json  query-ad0062cb84b5f979c725ec8a338066fcfcb4bf8cd3aeb5bd4513a026cf63c211.json  query-c4406c38a5a9d4e4867a8945149490d65c6b3d4b9161703633dc6f9279869a00.json  query-cb6b8024eaa42acf29e6586abe47e77f29dc1a0c8669967f825ae826108eb325.json  query-ce5f7a33c86a06d02c53d4e7280dc8fb1edcbf8dd52d5bd53a4339408585623a.json  query-e18f58922f588186220ffc1995286b8a2396ba393237cef88bf974a468147deb.json  query-e1d5201dce3a24cdb7000464c8c8abd771a47353cfbb7de40dd700425b3484ac.json  query-e8893db4c472d1edc64106c0459364c5a79fe558bcf1bd31d2fb5acced0a20b1.json  query-ec9deb388e0e806b7e2e9ffadd1682283bf7d8b06cd322d1b36e58e6e9cec7a6.json  query-f772e42f702528ff7f807371cda08d0070d20f60c4113dabb69bae9a7faa413e.json  query-f897cf84ce8aa2d4bd43a3bf54691727c058a756df408120059c662d7bd56ede.json  query-f99b6f3286e4c5075bd804992df1b0a199ec7673ef25c9b921e88616d7a8a531.json  query-fb6db4e59e2305c563204a0a5654764b82d3a6bb86b89bfec4ec85f13d2aae6a.json
synapse-storage/src/: account_data.rs  admin_federation.rs  admin_media.rs  ai_connection.rs  application_service.rs  audit.rs  background_update.rs  beacon.rs  burn_after_read.rs  call_session.rs  captcha.rs  cas.rs  dehydrated_device.rs  device.rs  e2ee_audit.rs  email_verification.rs  event_report.rs  feature_flags.rs  federation_blacklist.rs  federation_queue.rs  filter.rs  friend_room.rs  invite_blocklist.rs  lib.rs  maintenance.rs  matrixrtc.rs  media_quota.rs  membership.rs  moderation.rs  module.rs  oauth_client_storage.rs  oidc_session_storage.rs  oidc_user_mapping.rs  openclaw.rs  openid_token.rs  performance.rs  prelude.rs  presence.rs  privacy.rs  pruning.rs  (+32 more)
synapse-web/: Cargo.toml
synapse-web/src/: filter.rs
(+4930 files in other folders)
