[package]
name = "synapse-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.93.0"
authors = ["Synapse Rust Team"]
description = "Matrix Homeserver implemented in Rust"

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
todo = "warn"
unimplemented = "warn"
unused_async = "deny"
redundant_clone = "deny"
inefficient_to_string = "warn"
manual_ok_or = "deny"
map_unwrap_or = "deny"
if_not_else = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "warn"
redundant_else = "warn"

[features]
default = ["server", "core-private-chat", "openclaw"]
server = ["dep:axum", "dep:tower-http"]
openclaw = ["openclaw-routes"]
openclaw-routes = []
runtime-ddl = []
performance-tests = []
test-utils = []

# P0: vodozemac-based Megolm (default-enabled for production).
# Disable only during migration if the legacy AES-GCM megolm path is
# still needed. Once all deployments have migrated, the legacy path
# should be removed and this feature becomes unconditional.
vodozemac-megolm = []

# Non-core feature modules (can be disabled to produce a minimal build)
core-private-chat = ["friends", "burn-after-read"]
friends = []
voice-extended = ["server"]
saml-sso = []
cas-sso = []
beacons = []
voip-tracking = []
widgets = []
server-notifications = []
burn-after-read = []
privacy-ext = []
external-services = []
builtin-oidc = []
geo-ip = []

# Meta-feature: enable all extensions (default for backwards compatibility)
all-extensions = [
    "openclaw", "friends", "voice-extended",
    "saml-sso", "cas-sso",
    "beacons", "voip-tracking", "widgets", "server-notifications",
    "burn-after-read", "privacy-ext", "external-services",
    "builtin-oidc", "geo-ip",
    "vodozemac-megolm"
]

[dependencies]
tokio = { version = "1.49", features = ["full", "test-util"] }
async-trait = "0.1"

axum = { version = "0.8", optional = true, features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", optional = true, features = ["fs", "cors", "trace", "compression-gzip", "limit"] }
hyper = "1"
http = "1"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "json", "uuid", "ipnetwork", "migrate", "macros"] }
ipnetwork = "0.20"

redis = { version = "0.27", features = ["aio", "tokio-comp"] }
deadpool-redis = "0.18"
moka = { version = "0.12", features = ["future", "sync"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

rand = "0.8.5"
sha1 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
hmac = "0.12"
hkdf = "0.12"
base64 = "0.22"
zeroize = "1"

argon2 = "0.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = "2.0"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
generic-array = "0.14"
typenum = "1"

vodozemac = "0.9"

config = "0.14"

jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem", "sha2"] }
subtle = "2.5"

metrics = "0.23"

tracing = { version = "0.1", features = ["attributes"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
bytes = "1"
dashmap = { version = "6", features = ["serde"] }
parking_lot = "0.12"
regex = "1.10"
quick-xml = "0.37"
flate2 = "1.0"
url = "2.5"
urlencoding = "2.1"

reqwest = { version = "0.12", features = ["json"] }
validator = { version = "0.20.0", features = ["derive"] }
ammonia = "4.1"
infer = "0.19.0"
textwrap = "0.16"

image = "0.25"
hex = "0.4.3"
x509-cert = "0.2"
ring = "0.17"
dns-lookup = "3.0.1"
ipnet = "2.12.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
fake = "2.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3"
arbitrary = { version = "1", features = ["derive"] }
mockall = "0.13"
wiremock = "0.6"

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 0
debug = 0
codegen-units = 256
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "performance_api_benchmarks"
path = "benches/performance_api_benchmarks.rs"
harness = false

[[bench]]
name = "performance_federation_benchmarks"
path = "benches/performance_federation_benchmarks.rs"
harness = false

[workspace]

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["test-utils"]

[[test]]
name = "unit"
path = "tests/unit/mod.rs"
required-features = ["test-utils"]

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
required-features = ["test-utils"]

[[test]]
name = "performance_manual"
path = "tests/performance/mod.rs"
required-features = ["performance-tests"]
