[package]
name = "synapse-rust"
version = "6.0.5"
edition = "2021"
rust-version = "1.93.0"
authors = ["Synapse Rust Team"]
description = "Matrix Homeserver implemented in Rust"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "allow"
todo = "warn"
unimplemented = "warn"
unused_async = "deny"
redundant_clone = "deny"
inefficient_to_string = "warn"
manual_ok_or = "deny"
map_unwrap_or = "deny"
if_not_else = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "warn"
redundant_else = "warn"

[features]
default = ["server", "core-private-chat", "openclaw"]
server = ["dep:axum", "dep:tower-http"]
openclaw = ["openclaw-routes"]
openclaw-routes = ["synapse-common/openclaw-routes", "synapse-services/openclaw-routes", "synapse-storage/openclaw-routes"]
runtime-ddl = ["synapse-services/runtime-ddl", "synapse-storage/runtime-ddl"]
performance-tests = []
test-utils = ["synapse-services/test-utils"]

# Non-core feature modules (can be disabled to produce a minimal build)
core-private-chat = ["friends", "burn-after-read"]
friends = ["synapse-services/friends"]
voice-extended = ["server", "synapse-services/voice-extended"]
saml-sso = ["synapse-services/saml-sso"]
cas-sso = ["synapse-services/cas-sso"]
beacons = ["synapse-services/beacons"]
voip-tracking = ["synapse-services/voip-tracking", "synapse-storage/voip-tracking"]
widgets = ["synapse-services/widgets"]
server-notifications = ["synapse-services/server-notifications"]
burn-after-read = ["synapse-services/burn-after-read"]
privacy-ext = ["synapse-services/privacy-ext", "synapse-storage/privacy-ext"]
external-services = ["synapse-services/external-services"]
builtin-oidc = ["synapse-services/builtin-oidc"]
geo-ip = ["synapse-services/geo-ip"]

# Meta-feature: enable all extensions (default for backwards compatibility)
all-extensions = [
    "openclaw", "friends", "voice-extended",
    "saml-sso", "cas-sso",
    "beacons", "voip-tracking", "widgets", "server-notifications",
    "burn-after-read", "privacy-ext", "external-services",
    "builtin-oidc", "geo-ip"
]

# OpenAPI documentation generation (Swagger UI at /_swagger)
openapi-docs = ["dep:utoipa", "dep:utoipa-swagger-ui"]

[dependencies]
tokio = { version = "1.49", features = ["full", "test-util"] }
tokio-util = "0.7"
async-trait = "0.1"

axum = { version = "0.8", optional = true, features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", optional = true, features = ["fs", "cors", "trace", "compression-gzip", "limit"] }
hyper = "1"
http = "1"

# OpenAPI / Swagger UI (optional)
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "json", "uuid", "ipnetwork", "migrate", "macros", "bigdecimal"] }
ipnetwork = "0.20"

redis = { version = "0.29", features = ["tokio-rustls-comp"] }
deadpool-redis = "0.20"
moka = { version = "0.12", features = ["future", "sync"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

rand = "0.9"
sha1 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
hmac = "0.12"
hkdf = "0.12"
base64 = "0.22"
zeroize = "1"

argon2 = "0.5"
aes-gcm = "0.10.3"  # m-2: CVE-2023-42811 (RUSTSEC-2023-0096) fixed in 0.10.3; watch 0.11.x for stable release
chacha20poly1305 = "0.10"
ed25519-dalek = "2.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }  # m-2: curve25519-dalek 4.1.3 resolves RUSTSEC-2024-0344 (CVE-2024-58262); watch 3.x for stable release
generic-array = "0.14"
typenum = "1"

vodozemac = "0.9"

config = { version = "0.14", default-features = false, features = ["yaml", "convert-case"] }

jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem", "sha2"] }
subtle = "2.5"

metrics = "0.23"

tracing = { version = "0.1", features = ["attributes"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
bytes = "1"
dashmap = { version = "6", features = ["serde"] }
parking_lot = "0.12"
regex = "1.10"
quick-xml = "0.37"
flate2 = "1.0"
url = "2.5"
urlencoding = "2.1"

reqwest = { version = "0.12", features = ["json"] }
validator = { version = "0.20.0", features = ["derive"] }
ammonia = "4.1"
infer = "0.19.0"
textwrap = "0.16"
synapse-common = { path = "synapse-common" }
synapse-cache = { path = "synapse-cache" }
synapse-e2ee = { path = "synapse-e2ee", default-features = false }
synapse-federation = { path = "synapse-federation" }
synapse-services = { path = "synapse-services" }
synapse-storage = { path = "synapse-storage" }

image = "0.25"
hex = "0.4.3"
x509-cert = "0.2"
ring = "0.17"
dns-lookup = "3.0.1"
ipnet = "2.12.0"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
fake = "2.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3"
arbitrary = { version = "1", features = ["derive"] }
mockall = "0.13"
wiremock = "0.6"
# insta: snapshot testing for locking API output shapes
# Usage: see `.claude/skills/tdd-rust/SKILL.md` §5
insta = { version = "1.41", features = ["json", "redactions", "filters"] }

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 0
debug = 0
codegen-units = 256
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.bench]
inherits = "release"
debug = true

[[bin]]
name = "bench_harness"
path = "scripts/bench_harness.rs"

[[bench]]
name = "performance_api_benchmarks"
path = "benches/performance_api_benchmarks.rs"
harness = false

[[bench]]
name = "performance_federation_benchmarks"
path = "benches/performance_federation_benchmarks.rs"
harness = false

[[bench]]
name = "performance_sliding_sync_benchmarks"
path = "benches/performance_sliding_sync_benchmarks.rs"
harness = false
required-features = ["test-utils"]

[workspace]
members = [
    "synapse-common",
    "synapse-cache",
    "synapse-storage",
    "synapse-e2ee",
    "synapse-federation",
    "synapse-services",
]

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["test-utils", "privacy-ext", "voice-extended", "voip-tracking", "beacons", "server-notifications"]

[[test]]
name = "unit"
path = "tests/unit/mod.rs"
required-features = ["test-utils"]

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
required-features = ["test-utils"]

[[test]]
name = "performance_manual"
path = "tests/performance/mod.rs"
required-features = ["performance-tests", "test-utils"]
