[package]
name = "synapse-cache"
version = "0.1.0"
edition = "2021"
rust-version = "1.93.0"
authors = ["Synapse Rust Team"]
description = "Cache layer for Synapse Rust"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
synapse-common = { path = "../synapse-common" }

tokio = { version = "1.49", features = ["full", "test-util"] }
async-trait = "0.1"

deadpool-redis = "0.20"
redis = { version = "0.29", features = ["tokio-rustls-comp"] }
moka = { version = "0.12", features = ["future", "sync"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
parking_lot = "0.12"
flate2 = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
