[package]
name = "synapse-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.93.0"
authors = ["Synapse Rust Team"]
description = "Common utilities and types for Synapse Rust"
license = "AGPL-3.0-only"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[features]
default = ["server"]
server = ["dep:axum", "dep:tower-http"]
openclaw = []
openclaw-routes = []
runtime-ddl = []
test-utils = []
friends = []
voice-extended = []
saml-sso = []
cas-sso = []
beacons = []
voip-tracking = []
widgets = []
server-notifications = []
burn-after-read = []
privacy-ext = []
external-services = []
builtin-oidc = []
geo-ip = []
openapi-docs = ["dep:utoipa"]

[dependencies]
tokio = { version = "1.49", features = ["full", "test-util"] }
async-trait = "0.1"

axum = { version = "0.8", optional = true, features = ["macros"] }
tower-http = { version = "0.6", optional = true, features = ["fs", "cors", "trace", "compression-gzip", "limit"] }
http = "1"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "json", "uuid", "ipnetwork", "migrate"] }

redis = { version = "0.29", features = ["tokio-rustls-comp"] }
deadpool-redis = "0.20"
moka = { version = "0.12", features = ["future", "sync"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

rand = "0.9"
sha2 = { version = "0.10", features = ["oid"] }
hmac = "0.12"
hkdf = "0.12"
base64 = "0.22"

argon2 = "0.5"
aes-gcm = "0.10"
ed25519-dalek = "2.0"


config = { version = "0.14", default-features = false, features = ["yaml", "convert-case"] }


metrics = "0.23"

tracing = { version = "0.1", features = ["attributes"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }

chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
parking_lot = "0.12"
regex = "1.10"
quick-xml = "0.41"
url = "2.5"

validator = { version = "0.20.0", features = ["derive"] }
ammonia = "4.1"

hex = "0.4.3"
dns-lookup = "3.0.1"
ipnet = "2.12.0"

utoipa = { version = "5", features = ["axum_extras"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
fake = "2.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3"
arbitrary = { version = "1", features = ["derive"] }
mockall = "0.13"
wiremock = "0.6"
