[package]
name = "synapse-federation"
version = "0.1.0"
edition = "2021"
rust-version = "1.93.0"
authors = ["Synapse Rust Team"]
description = "Federation protocol implementation for Synapse Rust"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[features]
default = ["friends"]
friends = ["synapse-common/friends"]
test-utils = ["synapse-common/test-utils"]

[dependencies]
synapse-common = { path = "../synapse-common" }
synapse-cache = { path = "../synapse-cache" }
synapse-storage = { path = "../synapse-storage" }

tokio = { version = "1.49", features = ["full", "test-util"] }
async-trait = "0.1"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "json", "uuid", "ipnetwork", "migrate", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.22"
ed25519-dalek = "2.0"
sha2 = { version = "0.10", features = ["oid"] }
rand = "0.9"

reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }

moka = { version = "0.12", features = ["future", "sync"] }
parking_lot = "0.12"

tracing = { version = "0.1", features = ["attributes"] }
