[package]
name = "synapse-web"
version = "0.1.0"
edition = "2021"
rust-version = "1.93.0"
authors = ["Synapse Rust Team"]
description = "Web layer for Synapse Rust"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[features]
default = ["server"]
server = ["synapse-common/server", "synapse-services/server"]
openclaw = ["synapse-common/openclaw"]
openclaw-routes = ["synapse-common/openclaw-routes", "synapse-storage/openclaw-routes", "synapse-services/openclaw-routes"]
runtime-ddl = ["synapse-common/runtime-ddl", "synapse-storage/runtime-ddl"]
test-utils = ["synapse-common/test-utils", "synapse-storage/test-utils", "synapse-e2ee/test-utils", "synapse-federation/test-utils", "synapse-services/test-utils"]
performance-tests = []
vodozemac-megolm = ["synapse-common/vodozemac-megolm", "synapse-storage/vodozemac-megolm", "synapse-e2ee/vodozemac-megolm", "synapse-services/vodozemac-megolm"]
core-private-chat = ["friends", "burn-after-read"]
friends = ["synapse-common/friends", "synapse-storage/friends", "synapse-federation/friends", "synapse-services/friends"]
voice-extended = ["synapse-common/voice-extended", "synapse-storage/voice-extended", "synapse-services/voice-extended"]
saml-sso = ["synapse-common/saml-sso", "synapse-storage/saml-sso", "synapse-services/saml-sso"]
cas-sso = ["synapse-common/cas-sso", "synapse-storage/cas-sso", "synapse-services/cas-sso"]
beacons = ["synapse-common/beacons", "synapse-storage/beacons", "synapse-services/beacons"]
voip-tracking = ["synapse-common/voip-tracking", "synapse-storage/voip-tracking", "synapse-services/voip-tracking"]
widgets = ["synapse-common/widgets", "synapse-storage/widgets", "synapse-services/widgets"]
server-notifications = ["synapse-common/server-notifications", "synapse-storage/server-notifications", "synapse-services/server-notifications"]
burn-after-read = ["synapse-common/burn-after-read", "synapse-storage/burn-after-read", "synapse-services/burn-after-read"]
privacy-ext = ["synapse-common/privacy-ext", "synapse-storage/privacy-ext", "synapse-services/privacy-ext"]
external-services = ["synapse-common/external-services", "synapse-storage/external-services", "synapse-services/external-services"]
builtin-oidc = ["synapse-common/builtin-oidc", "synapse-storage/builtin-oidc", "synapse-services/builtin-oidc"]
geo-ip = ["synapse-common/geo-ip", "synapse-storage/geo-ip", "synapse-services/geo-ip"]

[dependencies]
synapse-common = { path = "../synapse-common" }
synapse-cache = { path = "../synapse-cache" }
synapse-storage = { path = "../synapse-storage" }
synapse-e2ee = { path = "../synapse-e2ee", default-features = false }
synapse-federation = { path = "../synapse-federation" }
synapse-services = { path = "../synapse-services" }

tokio = { version = "1.49", features = ["full", "test-util"] }
async-trait = "0.1"

axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-gzip", "limit"] }
hyper = "1"
http = "1"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "json", "uuid", "ipnetwork", "migrate", "macros"] }
ipnetwork = "0.20"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
bytes = "1"
dashmap = { version = "6", features = ["serde"] }
regex = "1.10"

tracing = { version = "0.1", features = ["attributes"] }

metrics = "0.23"

url = "2.5"
urlencoding = "2.1"

base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
subtle = "2.5"
rand = "0.8.5"
ed25519-dalek = "2.0"
hex = "0.4.3"
infer = "0.19.0"
reqwest = { version = "0.12", features = ["json"] }
validator = { version = "0.20.0", features = ["derive"] }
ammonia = "4.1"
image = "0.25"
ring = "0.17"
zeroize = "1"
parking_lot = "0.12"
argon2 = "0.5"
x509-cert = "0.2"
quick-xml = "0.37"
flate2 = "1.0"
